# web_url_scanner

./: README.md  architectural_adjustments.md  dashboard_key_performance_indicators.md  input.txt  pyproject.toml  requirements.txt
src/web_url_scanner/: entities.py  exceptions.py  file_writer.py  main.py  url_scanner.py  utils.py
