[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web_url_scanner"
version = "0.1.0"
description = "WEB URL Scanner"
authors = [{ name = "Ruslan Vihot", email = "vihotrus@gmail.com" }]
dependencies = [
    "beautifulsoup4==4.13.3",
    "httpx==0.28.1",
    "h2==4.2.0",
    "setuptools==75.8.2",
]

[tool.setuptools]
packages = ["web_url_scanner"]
package-dir = { "" = "src" }
